navbar is mostly complete/done - found quite the bug: when tabbing to the menu offscreen chrome moves the viewport over to the menu (oops i'll fix that later)

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -80,7 +80,7 @@ button:hover
 #app 
   max-width: 100vw
   margin: 0 auto
-  padding: 2rem
+  padding: 1.5em
   text-align: center
 
 
